[update] POM